[workspace]
members = [".", "client", "proc-macro", "test-node"]

[package]
name = "substrate-subxt"
version = "0.13.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/paritytech/substrate-subxt"
documentation = "https://docs.rs/substrate-subxt"
homepage = "https://www.parity.io/"
description = "Submit extrinsics (transactions) to a substrate node via RPC"
keywords = ["parity", "substrate", "blockchain"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

[features]
default = []
client = ["substrate-subxt-client"]

# enable this feature to run tests which require a local dev chain node
integration-tests = []

[dependencies]
log = "0.4.11"
thiserror = "1.0.20"
futures = "0.3.5"
jsonrpsee = { version = "0.1.0", features = ["ws"] }
num-traits = { version = "0.2.12", default-features = false }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
url = "2.1.1"
codec = { package = "parity-scale-codec", version = "1.3.5", default-features = false, features = ["derive", "full"] }

frame-metadata = { version = "12", package = "frame-metadata" }
frame-support = { version = "2.0.0", package = "frame-support" }
sp-runtime = { version = "2.0.0", package = "sp-runtime" }
sp-version = { version = "2.0.0", package = "sp-version" }
pallet-indices = { version = "2.0.0", package = "pallet-indices" }
hex = "0.4.2"
sp-std = "2.0.0"
application-crypto = { version = "2.0.0", package = "sp-application-crypto" }
pallet-staking = "2.0.0"

sp-rpc = { version = "2.0.0", package = "sp-rpc" }
sp-core = { version = "2.0.0", package = "sp-core" }
substrate-subxt-client = { version = "0.5.0", path = "client", optional = true }
substrate-subxt-proc-macro = { version = "0.13.0", path = "proc-macro" }

[dev-dependencies]
async-std = { version = "1.6.4", features = ["attributes"] }
env_logger = "0.7.1"
frame-system = { version = "2.0.0", package = "frame-system" }
pallet-balances = { version = "2.0.0", package = "pallet-balances" }
sp-keyring = { version = "2.0.0", package = "sp-keyring" }
substrate-subxt-client = { version = "0.5.0", path = "client" }
tempdir = "0.3.7"
test-node = { path = "test-node" }
wabt = "0.10.0"
assert_matches = "1.3"

[patch.crates-io]
frame-executive = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-indices = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-session = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-staking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-client-db = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-consensus-slots = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-informant = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-network = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-service = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sc-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-api = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-externalities = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-keystore = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-rpc = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime-interface = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime-interface-proc-macro = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-session = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-staking = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-state-machine = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-storage = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-trie = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = "master" }
